--- a/src/Styles/userList.css
+++ b/src/Styles/userList.css
@@ -1,7 +1,11 @@
 
 .container {
     display: flex;
+    display: block;
+    /* position: relative; */
+    margin-left: 200px;
     flex-direction: column;
+    /* justify-content: center; */
     align-items: center;
     padding: 20px;
     background-color: #f9f9f9;
@@ -19,6 +23,7 @@
   }
   
   ul {
+    
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -66,6 +71,7 @@
   /* Responsive design adjustments */
   @media (max-width: 600px) {
     .container {
+      margin-right: 30px;
       padding: 10px;
     }
   
