--- a/src/Styles/create.css
+++ b/src/Styles/create.css
@@ -9,6 +9,7 @@
    
   #h{
     margin-bottom: 10px;
+      margin-left: 300px;
   }
 
   .form {
@@ -72,6 +73,7 @@
     .form {
       padding: 15px;
       max-width: 100%;
+      margin-bottom: 800px;
     }
   
     .form button {
